--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,9 +7,17 @@ provisioner:
 
 platforms:
   - name: ubuntu-12.04
+    run_list:
+      - recipe[apt]
   - name: ubuntu-14.04
+    run_list:
+      - recipe[apt]
   - name: centos-6.5
+    run_list:
+      - recipe[yum-epel]
   - name: centos-7.0
+    run_list:
+      - recipe[yum-epel]
 
 suites:
   - name: apache
